--- a/reactportfolio/package.json
+++ b/reactportfolio/package.json
@@ -23,7 +23,8 @@
     "@sanity/vision": "^2.7.4",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {},
   "repository": {
